# listener

./: .gitignore  .semgrepignore  Cargo.toml  README.md
crates/audio-ingest/: Cargo.toml
crates/audio-ingest/src/: lib.rs  vad.rs
crates/corpus/: Cargo.toml
crates/corpus/src/: lib.rs
crates/craig-poller/: Cargo.toml
crates/craig-poller/src/: lib.rs
crates/listenerd/: Cargo.toml
crates/listenerd/src/: main.rs
crates/whisper-local/: Cargo.toml
crates/whisper-local/src/: lib.rs
deploy/: matt-voice-listenerd.service
