[workspace]
resolver = "2"
members = [
    "crates/audio-ingest",
    "crates/whisper-local",
    "crates/craig-poller",
    "crates/corpus",
    "crates/listenerd",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Matt Gates <mmichels88@gmail.com>"]
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"

# local workspace crates
audio-ingest = { path = "crates/audio-ingest" }
whisper-local = { path = "crates/whisper-local" }
craig-poller = { path = "crates/craig-poller" }
corpus = { path = "crates/corpus" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
