[package]
name = "corpus"
version.workspace = true
edition.workspace = true

[[bin]]
name = "corpus"
path = "src/bin/corpus.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
walkdir.workspace = true
whisper-local.workspace = true
audio-ingest.workspace = true
