[package]
name = "listenerd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "listenerd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
audio-ingest.workspace = true
whisper-local.workspace = true
craig-poller.workspace = true
corpus.workspace = true
